# titanic-mlops

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  download_data.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-build.yml  tests.yml
data/derived/: .gitkeep
docs/: CHECKPOINT2_VERIFICATION.md  CONVENTIONAL_COMMITS.md  PROFESSOR_FEEDBACK.md  PROJECT_STRUCTURE.md
reports/: README.md
scripts/: __init__.py  docker_build_test.sh  download_data.py  setup_checkpoint2.bat  setup_checkpoint2.sh
src/: api.py  download_data.py  main.py  preprocessing.py  train.py  utils.py
src/dashboard/: streamlit_app.py
tests/: __init__.py  test_api.py  test_preprocessing.py  test_train.py  test_utils.py
