[project]
name = "mlofinal"
version = "0.1.0"
description = "ML Ops final project: end-to-end Titanic survival prediction pipeline with preprocessing, baseline model training, and a CLI entrypoint."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "matplotlib>=3.10.8",
    "mlflow>=2.8.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
kaggle = [
    "kaggle>=1.6.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "httpx>=0.28.1",
    "pre-commit>=3.5.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=60",
    "--cov-branch",
    "-v",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/__init__.py",
    "*/main.py",
    "*/download_data.py",
    "*/train.py:main",
    "*/train.py:if __name__",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
